--- a/pdf-proposal-generator.html
+++ b/pdf-proposal-generator.html
@@ -975,7 +975,7 @@
             economy: { min: 800, max: 1200, avg: 965, name: 'Economy', description: 'Quality materials, solid construction' },
             standard: { min: 1000, max: 1500, avg: 1225, name: 'Standard', description: 'Enhanced features, better finishes' },
             premium: { min: 1400, max: 1900, avg: 1630, name: 'Premium', description: 'High-end materials, custom details' },
-            luxury: { min: 1900, max: 2600, avg: 2250, name: 'Luxury', description: 'Luxury finishes, premium hardware' }
+            premium: { min: 1900, max: 2600, avg: 2250, name: 'premium', description: 'premium finishes, premium hardware' }
         };
 
         // Add-ons data
@@ -989,7 +989,7 @@
             { id: 'spice-rack', name: 'Pull-Out Spice Racks', price: 350, description: 'Organized spice storage' },
             { id: 'trash-pullout', name: 'Trash Pull-Out Systems', price: 275, description: 'Concealed waste management' },
             { id: 'glass-doors', name: 'Glass Cabinet Doors', price: 650, description: 'Elegant display options' },
-            { id: 'premium-handles', name: 'Premium Hardware Upgrade', price: 450, description: 'Luxury cabinet hardware' }
+            { id: 'premium-handles', name: 'Premium Hardware Upgrade', price: 450, description: 'premium cabinet hardware' }
         ];
 
         // Configuration application
@@ -1548,3 +1548,4 @@
     </script>
 </body>
 </html>
+
