--- a/360-project-viewer.html
+++ b/360-project-viewer.html
@@ -688,8 +688,8 @@
                 }
             },
             {
-                id: 'luxury-bathroom-360',
-                title: 'Luxury Master Bathroom',
+                id: 'premium-bathroom-360',
+                title: 'premium Master Bathroom',
                 icon: '🛁',
                 description: 'Spa-inspired bathroom retreat',
                 scenes: [
@@ -1226,3 +1226,4 @@
     </script>
 </body>
 </html>
+
