--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
         <div class="hero-content">
             <div class="company-logo">ðŸªµ</div>
             <h1 class="company-name">Foundry Cabinets Co</h1>
-            <p class="company-subtitle">Premium Cabinet Solutions</p>
+            <p class="company-subtitle">by District Design Build, LLC</p>
             <p class="company-tagline">Driven by Precision. Evolved by Design.</p>
             
             <div class="hero-stats">
@@ -533,7 +533,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-content">
-            <p>&copy; 2025 Foundry Cabinets Co | Premium Cabinet Solutions</p>
+            <p>&copy; 2025 Foundry Cabinets Co | District Design Build, LLC</p>
             <p style="margin-top: 0.5rem; opacity: 0.8;">Licensed â€¢ Bonded â€¢ Insured â€¢ Your Satisfaction Guaranteed</p>
         </div>
     </footer>
