--- a/pdf-proposal-generator.html
+++ b/pdf-proposal-generator.html
@@ -989,7 +989,7 @@
             { id: 'spice-rack', name: 'Pull-Out Spice Racks', price: 350, description: 'Organized spice storage' },
             { id: 'trash-pullout', name: 'Trash Pull-Out Systems', price: 275, description: 'Concealed waste management' },
             { id: 'glass-doors', name: 'Glass Cabinet Doors', price: 650, description: 'Elegant display options' },
-            { id: 'premium-handles', name: 'Premium Hardware Upgrade', price: 450, description: 'premium cabinet hardware' }
+            { id: 'premium-handles', name: 'Premium Hardware Upgrade', price: 450, description: 'Premium cabinet hardware' }
         ];
 
         // Configuration application
@@ -1548,4 +1548,5 @@
     </script>
 </body>
 </html>
+
 
